# ml-api

./: .dockerignore  .gitignore  Dockerfile  Enregistrement.m4a  pyproject.toml
.github/workflows/: ci.yml
app/: logger.py  main.py
app/routers/: stt.py  tts.py
app/schemas/: stt.py  tts.py
config/: settings.py
tests/: test_decode_audio.py  test_diarization_merge.py  test_normalize_audio.py  test_settings.py
