[project]
name = "ml-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "numpy>=1.24.0",
    "pydub>=0.25.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "soundfile>=0.14.0",
    "faster-whisper>=1.0.3",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
